--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,25 @@
 version: '3.8'
 
-# =============================================================================
-# PAISS - Company Website Deployment
-# =============================================================================
-# Builds from local Dockerfile and joins platform network
-# =============================================================================
+services:
+  web:
+    build: .
+    networks:
+      - platform
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "3"
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 networks:
   platform:
     external: true
-    name: platform
-
-services:
-  # ===========================================================================
-  # PAISS Web (Static Site)
-  # ===========================================================================
-  paiss-web:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: ${CONTAINER_NAME:-paiss-web}
-    restart: unless-stopped
-    networks:
-      - platform
-    healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 10s
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-    labels:
-      - "project=paiss"
-      - "environment=${ENVIRONMENT:-production}"
